# croakerType

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md
.cursor/rules/: documentation.mdc
.github/workflows/: ci.yml
config/: default_prompt.txt
docs/: ARCHITECTURE.md  INSTALL.md  SETUP.md
examples/: test_keyboard.rs
src/: main.rs
src/audio/: mod.rs
src/config/: mod.rs
src/daemon/: mod.rs  state.rs
src/input/: evdev.rs  mod.rs  portal.rs  socket.rs
src/output/: clipboard.rs  mod.rs  uinput.rs
src/overlay/: gtk_window.rs  layer_shell.rs  mod.rs  notification.rs  tray.rs
src/transcribe/: cleanup.rs  mod.rs  whisper.rs
