[package]
name = "croaker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["multipart", "json"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
zbus = "4"
evdev = "0.12"
gtk4 = "0.7"
gdk4 = "0.7"
cairo-rs = "0.19"
tempfile = "3"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
which = "5"
users = "0.11"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
layer-shell = ["gtk4-layer-shell"]

[target.'cfg(unix)'.dependencies]
gtk4-layer-shell = { version = "0.2", optional = true }

