[package]
name = "croaker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["multipart", "json"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
zbus = "4"
evdev = "0.12"
tempfile = "3"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
which = "5"
users = "0.11"
uuid = { version = "1.0", features = ["v4"] }
ksni = { version = "0.3", features = ["blocking"] }

[features]
default = []

[[example]]
name = "test_keyboard"
path = "examples/test_keyboard.rs"

